@@ -6,7 +6,7 @@ import net.bivrik.fancynotify.utility.ResourceLocations;
 import net.minecraft.client.gui.GuiGraphics;
 import net.minecraft.network.chat.Component;
 import net.minecraft.resources.ResourceLocation;
-import net.minecraft.world.item.crafting.RecipeHolder;
+import net.minecraft.world.item.crafting.Recipe;
 
 import java.awt.*;
 import java.util.ArrayList;
@@ -14,14 +14,13 @@ import java.util.List;
 import java.util.Objects;
 
 public class RecipeNotification extends ExpandableNotification {
-    private static final ResourceLocation BACKGROUND = ResourceLocations.of("notifications/recipe");
     private static final Component TITLE = Component.translatable("recipe.toast.title");
     private static final Component MESSAGE = Component.translatable("recipe.toast.description");
 
-    private final List<RecipeHolder<?>> recipes = new ArrayList<>();
+    private final List<Recipe<?>> recipes = new ArrayList<>();
     private final int color = new Color(119, 0, 119).getRGB();
 
-    public RecipeNotification(NotificationManager manager, RecipeHolder<?> recipe) {
+    public RecipeNotification(NotificationManager manager, Recipe<?> recipe) {
         super(manager, TITLE, MESSAGE);
 
         recipes.add(recipe);
@@ -35,7 +34,7 @@ public class RecipeNotification extends ExpandableNotification {
     @Override
     protected void expand(ExpandableNotification notification) {
         if (notification instanceof RecipeNotification recipeNotification) {
-            recipes.add(recipeNotification.recipes.getFirst());
+            recipes.add(recipeNotification.recipes.get(0));
         }
     }
 
@@ -43,12 +42,12 @@ public class RecipeNotification extends ExpandableNotification {
     @Override
     public void draw(GuiGraphics guiGraphics) {
         countTemp += 1 / 2f;
-        drawSprite(guiGraphics, BACKGROUND, 0, 0, getWidth(), getHeight());
+        drawBackground(guiGraphics, 0, 224);
         drawText(guiGraphics, getTitle(), getTextOffset(), 7, color);
         drawMessage(guiGraphics, getTextOffset(), 18, Color.black.getRGB());
 
         int orderedIndex = (int) (countTemp / Math.max(1f, (double) getLifeTimeTicks() / recipes.size()) % recipes.size());
-        var recipe = recipes.get(orderedIndex).value();
+        var recipe = recipes.get(orderedIndex);
         var stack = guiGraphics.pose();
         stack.pushPose();
         stack.scale(0.85f, 0.85f, 1.0f);
